--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,22 @@ body {
 .teclado {
     background-color: #403a3a;
 }
+
+.teclado--linha {
+    display: flex;
+    justify-content: center;
+}
+
+.teclado--botao {
+    width: 70px;
+    height: 40px;
+    background-color: #000;
+    color: #fff;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    cursor: pointer;
+    box-shadow: 2px 2px 0px #555;
+}
